--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
     -->
     <link
     rel="icon"
-    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14/svgs/solid/industry.svg"
+    href="https://static.thenounproject.com/png/3914586-200.png"
     />
     <title>Pymes 2024</title>
   </head>
